# ons-python-template

./: .gitignore  .markdown-lint.yml  .mega-linter.yml  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  copier.yml  macros.jinja  project-README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  release.yml  rename_project.sh  template.yml
project_name/: calculator.py
project_template/: .editorconfig  .gitignore  .gitignore.jinja  .mega-linter.yml  .pre-commit-config.yaml.jinja  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile.jinja  README.md.jinja  pyproject.toml.jinja  {% if enable_copier_updates %}poetry.lock{% endif %}  {% if is_public_repo %}LICENSE{% endif %}  {% if is_public_repo %}LICENSE{% endif %}.jinja  {% if not enable_copier_updates %}poetry.lock{% endif %}  {% if not is_public_repo %}PIRR.md{% endif %}.jinja  {% if not_pipenv_copier %}Pipfile.lock{% endif %}.jinja  {% if not_pipenv_copier %}Pipfile{% endif %}.jinja  {% if not_poetry_copier %}poetry.lock{% endif %}.jinja  {% if not_poetry_copier %}pyproject.toml{% endif %}.jinja  {% if pipenv_copier %}Pipfile.lock{% endif %}.jinja  {% if pipenv_copier %}Pipfile{% endif %}.jinja  {% if pipenv_no_copier %}Pipfile.lock{% endif %}.jinja  {% if pipenv_no_copier %}Pipfile{% endif %}.jinja  {% if poetry_copier %}poetry.lock{% endif %}.jinja  {% if poetry_copier %}pyproject.toml{% endif %}.jinja  (+7 more)
scripts/package_manager_helper/: Pipfile  Pipfile.template  pyproject.poetry.toml  pyproject.toml  pyproject.uv.toml  update_template_packages.sh
(+36 files in other folders)
